[package]
name = "zk-rust-wait"
version = "0.1.0"
authors = ["Martijn Koster <mak-github@greenhills.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8"
parse_duration = "2.0.1"
regex = "1.3.1"
trust-dns-resolver = "0.12.0"
lazy_static = "1.4.0"
